--- a/BackEnd/db_service/Dockerfile
+++ b/BackEnd/db_service/Dockerfile
@@ -5,6 +5,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y curl && apt-get clean
+RUN apt-get update && apt-get install -y iputils-ping
 
 # Copy only the dependencies file first (for caching)
 COPY requirements.txt /app
