--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ BackEnd/feature_extraction_service/.ipynb_checkpoints
 .ipynb_checkpoints/extractParams-checkpoint.py
 .ipynb_checkpoints/
 ./BackEnd/model_IA_service/__pycache__/main.cpython-38.pyc
+__pycache__/
+*.pyc
