--- a/BackEnd/orchestrator_service/Dockerfile
+++ b/BackEnd/orchestrator_service/Dockerfile
@@ -1,5 +1,5 @@
-# Use a lightweight Python image
-FROM python:3.9-slim
+# Use a Python image
+FROM python:3.10
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -17,7 +17,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . /app
 
 # Expose the application port
-EXPOSE 8003
+EXPOSE 50000
 
 # Command to start the FastAPI service
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "orchestrator:app", "--host", "0.0.0.0", "--port", "50000"]
